--- a/Bank_Data_DLL/Bank_Data_DLL.csproj
+++ b/Bank_Data_DLL/Bank_Data_DLL.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="User.cs" />
